[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Objects/Weapons/Sword.gd" type="Script" id=1]
[ext_resource path="res://_common/sfx/Sword_Swing.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Objects/Weapons/pickaxe.png" type="Texture" id=3]
[ext_resource path="res://_common/sfx/Player_Melee_Hit.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 85.0149, 48.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DamageArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DamageArea:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DamageArea/Sprite/SpeedLines:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "swing"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("DamageArea/Sprite/SpeedLines:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DamageArea:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 111.664, 0.0, -120.0, 0.0 ]
}

[node name="PickAxe" type="Node2D"]
script = ExtResource( 1 )
damage = 10.0

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 87.4541, 0.500002 )
scale = Vector2( 0.765566, 0.78367 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="DamageArea"]

[node name="SpeedLines" type="Sprite" parent="DamageArea/Sprite"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="DamageArea/Sprite/SpeedLines"]
position = Vector2( 41, -1 )
scale = Vector2( 0.284879, 0.278 )
color = Color( 0.27451, 0.615686, 0.72549, 0.576471 )
polygon = PoolVector2Array( 51, 26, 120, 61, 198, 61, 324, 26, 264, 191, 150, 294, 20, 317, -118, 281, -199, 216, -72, 243, 26, 231, 90, 147, 82, 95 )

[node name="AxeSprite" type="Sprite" parent="DamageArea/Sprite"]
position = Vector2( 110, -2.91038e-11 )
rotation = 1.57079
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/swing = SubResource( 5 )

[node name="SwingNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 0.7

[node name="CrunchNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="HitCooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="HitCooldownTimer" to="." method="_on_HitCooldownTimer_timeout"]
